# Epitech-Zappy

./: .gitignore  Makefile  README.md
gui/: CMakeLists.txt  compile.sh  main.cpp
gui/Core/: Core.cpp  Core.hpp  Egg.cpp  Egg.hpp  Inventory.cpp  Inventory.hpp  MapTile.cpp  MapTile.hpp  Player.cpp  Player.hpp
gui/ErrorException/: ErrorException.hpp
gui/Factory/: FactoryObject.cpp  FactoryObject.hpp  FactoryUI.cpp  FactoryUI.hpp
gui/Graphics/: AObject.cpp  AObject.hpp  AUI.cpp  AUI.hpp  AUIText.cpp  AUIText.hpp  MyCamera.cpp  MyCamera.hpp  MyWindow.cpp  MyWindow.hpp  Object.cpp  Object.hpp  SoundManager.cpp  SoundManager.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
gui/Interfaces/: IObject.hpp  IUI.hpp
gui/ServerClient/: ServerClient.cpp  ServerClient.hpp
gui/includes/: GraphicLibrary.hpp  Headers.hpp
ia/: Connect.py  Makefile  Parsing.py  ia.sh
server/: Makefile
server/include/: server.h
server/src/: allocate_map.c  args_parser.c  bct.c  broadcast.c  command_handler.c  command_init.c  disconnection.c  egg.c  eject.c  elevation.c  elevation_five_to_six.c  elevation_four_to_five.c  elevation_one_to_two.c  elevation_seven_to_eight.c  elevation_six_to_seven.c  elevation_three_to_four.c  elevation_two_to_three.c  fork.c  get_client_socket.c  get_resources.c  get_server_input.c  getplayerbyid.c  help.c  init_server.c  inventory.c  main.c  map.c  mouvement.c  my_recv.c  player.c  pnw.c  resource_number.c  resources.c  resources_checker.c  send_msg_graphic.c  set_object.c  strtrim.c  take_object.c  team.c  time.c  (+4 more)
